=== master

* Make Database#extension not attempt to load the same extension more than once (jeremyevans)

* Implement Database#freeze such that it can be used in production (jeremyevans)

* Freeze enum_labels in the pg_enum extension (jeremyevans)

* Handle Database#type_supported? thread-safely on PostgreSQL (jeremyevans)

* Handle primary_key_sequences thread-safely on Oracle (jeremyevans)

* Handle sharding better when using mysql2 native prepared statements (jeremyevans)

* Use thread-safe incrementor for mock adapter autoid handling (jeremyevans)

* Make Model#freeze not freeze associations hash until after validating the model instance (jeremyevans)

* Make prepared_statements_associations plugin work correctly when model object explicitly specifies server to use when also using sharding plugin (jeremyevans)

* Make prepared_statements_with_pk plugin work correctly when dataset explicitly specifies server to use (jeremyevans)

* Make prepared_statements plugin work correctly when model object explicitly specifies server to use (jeremyevans)

* Make dataset_module inherited to subclasses when using the single_table_inheritance plugin (jeremyevans) (#1284)

* Support use of SQLite result codes in the jdbc-sqlite adapter, if the jdbc sqlite driver supports them (flash-gordon, jeremyevans) (#1283)

* Make timestamp migrator handle key length limitations when using MySQL with InnoDB engine and utf8mb4 charset default (jeremyevans) (#1282)

=== 4.42.0 (2017-01-01)

* Handle eager load callbacks correctly for one_to_one associations with orders or offsets when window functions are not supported (jeremyevans)

* Raise Sequel::Error if using an :eager_limit dataset option when eager loading a singular association (jeremyevans)

* Replace internal uses of Dataset#select_more with #select_append to save a method call (jeremyevans)

* Make Dataset#order_append the primary method, and #order_more the alias, for similarity to #select_append and #select_more (jeremyevans)
